@@ -40,6 +40,7 @@ export(get.treeinfo)
 export(get.treetext)
 export(getNodeNum)
 export(getRoot)
+export(get_taxa_name)
 export(ggplotGrob)
 export(ggtree)
 export(gheatmap)
